# HelpForMax

./: .gitignore  .gitmodules  CMakeLists.txt  HelpForMax.precompiled.h  MainWindow.cpp  MainWindow.h  README.md  RefStructure.cpp  RefStructure.h  TestClient.cpp
Components/: MessageBar.cpp  MessageBar.h  MessageChannel.cpp  MessageChannel.h  ProgressIndicator.cpp  ProgressIndicator.h  RecentTabWidget.cpp  RefModel.cpp  RefModel.h  RefModel.hpp  build.cmake
Icons/: PatchSuggest.afdesign  PatchTransferSelected.afdesign
Max/: MaxLine.cpp  MaxLine.h  MaxObject.cpp  MaxObject.h  MaxPatcher.cpp  MaxPatcher.h  MaxStyle.cpp  MaxStyle.h  MaxWidget.cpp  MaxWidget.h
Package/: PackageCleanDialog.cpp  PackageCleanDialog.h  PackageCleanDialog.ui  PackageCleanModel.cpp  PackageCleanModel.h  PackageContainer.cpp  PackageContainer.h  PackageInfo.cpp  PackageInfo.h  PackageModel.cpp  PackageModel.h  PackageWidget.cpp
Patch/: FileHelp.cpp  FileInit.cpp  FileRef.cpp  PatchContainer.cpp  PatchContainer.h  PatchInfo.cpp  PatchInfo.h  PatchWidget.cpp  PatchWidget.h
PatchRef/: PatchRefModelAbstract.cpp  PatchRefModelAbstract.h  PatchRefModelArgument.cpp  PatchRefModelHeader.cpp  PatchRefModelNamedMessage.cpp  PatchRefModelOutput.cpp  PatchRefModelTypedMessage.cpp  PatchRefTreeView.cpp  PatchRefWidget.cpp  PatchRefWidget.h  PatchRefWidget.ui
Suggest/: SuggestModelAbstract.cpp  SuggestModelAbstract.h  SuggestModelArgument.cpp  SuggestModelArgument.h  SuggestModelNamedMessage.cpp  SuggestModelNamedMessage.h  SuggestModelOutput.cpp  SuggestModelOutput.h  SuggestModelTypedMessage.cpp  SuggestModelTypedMessage.h  SuggestTransferDialog.cpp  SuggestTransferDialog.h  SuggestTransferDialog.ui  SuggestTransferModel.cpp  SuggestTransferModel.h  SuggestTreeView.cpp  SuggestTreeView.h  SuggestWidget.cpp  SuggestWidget.h  SuggestWidget.ui
_Resources/: MenuAndToolBar.xml  PatchTransferAll.afdesign  Resources.qrc  _MenuAndToolBar.xml
src/: CleanModel.h  ComponentsModel.cpp  ComponentsModel.h  ComponentsView.cpp  ComponentsView.h  EditWidget.cpp  EditWidget.h  HelpForMax.pro  MainWindow.cpp  MainWindow.h  Message.cpp  Message.h  PatchParser.cpp  PatchParser.h  SelectModel.cpp  SelectModel.h  SelectView.cpp  SelectView.h
src/Block/: Block.cpp  Block.h  Block.pri  BlockHelp.cpp  BlockHelp.h  BlockInitFile.cpp  BlockInitFile.h  BlockItem.cpp  BlockItem.h  BlockPatch.cpp  BlockPatch.h  BlockPatcher.cpp  BlockPatcher.h  BlockRef.cpp  BlockRef.h  BlockSettings.cpp  BlockSettings.h  BlockStructure.cpp  BlockStructure.h
src/Clean/: Clean.pri  CleanDialog.cpp  CleanDialog.h  CleanModel.cpp  CleanModel.h
src/Component/: 02_Component.pri  03_Component.pri  ArgumentView.cpp  ArgumentView.h  ComponentMetaTagWidget.cpp  ComponentMetaTagWidget.h  ComponentModel.cpp  ComponentModel.h  ComponentSeeAlsoWidget.cpp  ComponentSeeAlsoWidget.h  ComponentView.cpp  ComponentView.h  ComponentWidget.cpp  ComponentWidget.h  DescriptionHighlighter.cpp  PageAbstract.cpp  PageAbstract.h  PageArgument.cpp  PageArgument.h  PageArgument.ui  PageAttribute.cpp  PageAttribute.h  PageBlank.cpp  PageBlank.h  PageMessageStandard.cpp  PageMessageStandard.h  PageMessageUserDefined.cpp  PageMessageUserDefined.h  PageMessageUserDefined.ui  PageOutput.cpp  PageOutput.h  PageOutput.ui  PagePatch.cpp  PagePatch.h  PagePatch.ui
src/Components/: ComponentMetaTagWidget.cpp  ComponentModel.cpp  ComponentModel.h  ComponentView.cpp  ComponentWidget.cpp  Components.pri  ComponentsModel.cpp  ComponentsModel.h  ComponentsView.cpp  ComponentsView.h
src/Edit/: 04_Edit.pri  ArgumentView.cpp  ArgumentView.h  DescriptionHighlighter.cpp  Edit.pri  EditWidget.cpp  EditWidget.h  PageAbstract.cpp  PageAbstract.h  PageArgument.cpp  PageArgument.h  PageArgument.ui  PageAttribute.cpp  PageAttribute.h  PageAttribute.ui  PageBlank.cpp  PageBlank.h  PageBlank.ui  PageMessage.cpp  PageMessage.h  PageMessage.ui  PageMessageFree.cpp  PageMessageFree.h  PageMessageFree.ui  PageMessageStandard.cpp  PageMessageStandard.h  PageMessageStandard.ui  PageMessageUserDefined.cpp  PageMessageUserDefined.ui  PageOutput.cpp  PageOutput.h  PagePatch.cpp  PagePatch.h  PagePatch.ui
src/Overview/: OverviewGraph.cpp  OverviewGraph.h  OverviewWidget.cpp  (+1 more)
(+47 files in other folders)
